# txt

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASES.md  future_lsp_plan.md  install.ps1  install.sh  renovate.json
.github/workflows/: ci.yml  deploy-website.yml  release.yml
benches/: buffer.rs
scripts/: check.sh  release.sh
src/: app.rs  error.rs  main.rs  theme.rs
src/buffer/: cursor.rs  edit.rs  history.rs  mod.rs
src/clipboard/: mod.rs
src/config/: mod.rs
src/editor/: mod.rs  tab.rs  viewport.rs
src/git/: mod.rs
src/input/: action.rs  keybinding.rs  mod.rs
src/lsp/: capabilities.rs  client.rs  config.rs  mod.rs  protocol.rs  transport.rs  types.rs
src/search/: mod.rs
src/syntax/: highlighter.rs  language.rs  mod.rs
src/ui/: command_palette.rs  completion_popup.rs  editor_view.rs  fuzzy_picker.rs  help_overlay.rs  hover_popup.rs  lsp_picker.rs  mod.rs  references_list.rs  search_bar.rs  settings_overlay.rs  sidebar.rs  status_bar.rs  tab_bar.rs
src/watcher/: mod.rs
web/: _config.yml  index.md
web/_layouts/: default.html
